<resources>
    <string name="app_name">Banana App</string>
    <string name="title_activity_main_no_navbar">Ласкаво просимо</string>
    <string name="action_settings_no_navbar">Налаштування</string>
    <string name="logout_prompt">Вийти</string>
    <string name="about_prompt">Про програму</string>
    <string name="dialog_positive_button">Зберегти</string>
    <string name="dialog_negative_button">Скасувати</string>
    <string name="dialog_name_text">Назва</string>
    <string name="dialog_country_text">Країна</string>
    <string name="dialog_price_text">Ціна</string>
    <string name="activity_main_logout_successful">Ви успішно вийшли</string>
    <string name="activity_login_username">Ім’я</string>
    <string name="activity_login_password">Пароль</string>
    <string name="activity_login_noaccount_message">Не маєте запису?</string>
    <string name="activity_login_button_register">Зареєструватися</string>
    <string name="activity_login_login_prompt">Увійти</string>
    <string name="activity_register_login_prompt">Реєстрація</string>

    <string name="google_sign_in_failed">Авторизація за допомогою Google не вдалась.
        Перевірте ще раз дані входу.    </string>
    <string name="google_sign_in_connection_failed">Помилка з’єднання. Спробуйте, будь ласка,
    пізніше.</string>
    <string name="facebook_login_error">Помилка входу через Facebook/ Спробуйте, будь ласка,
    пізніше</string>
    <string name="location_permission_denied">Дозвіл визначення місця розташування
        не був наданий</string>
    <string name="permission_required_toast">Будь ласка, надайте доступ до місця розташування</string>
    <string name="permission_rationale_location">Цей дозвіл необхідний для того, щоб показати
    фрагмент карти та місця найбільш цікаві для вас на цей момент</string>
    <string name="toast_not_all_fields">Заповніть усі поля</string>
    <string name="dialog_add_title">Додавання</string>
    <string name="dialog_edit_title">Редагування</string>
    <string name="drawer_image_description">Опис фону</string>
    <string name="title_activity_nav">NavActivity</string>
    <string name="search_title">Пошук</string>
    <string name="search_hint">Здійснити пошук</string>

    <string name="navigation_drawer_contacts">Контакти</string>
    <string name="navigation_drawer_weather">Погода</string>
    <string name="navigation_drawer_maps">Карти</string>
    <string name="navigation_drawer_logout">Вийти</string>
    <string name="title_activity_main">Main Activity</string>
    <string name="navigation_drawer_open">Відкрити</string>
    <string name="navigation_drawer_close">Закрити</string>
    <string name="action_settings">Налаштування</string>
    <string name="navbar_icon_description">Лого</string>

    <string name="fragment_phone_contacts">Телефонна книга</string>
    <string name="fragment_my_contacts">Мої контакти</string>
    <string name="dialog_contacts_text_name">Ім’я</string>
    <string name="dialog_contacts_text_phone">Телефон</string>

    <string name="contacts_context_menu_edit">Редагувати</string>
    <string name="contacts_context_menu_delete">Видалити</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="google_maps_api_key" translatable="false">AIzaSyC_EIZGbna_iUQ_ebIfXSqnK0b9RVKcp7U</string>
    <string name="facebook_app_id" translatable="false">358354714549128</string>
</resources>
