<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/main_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_contacts"
            android:icon="@drawable/ic_contacts_black_24dp"
            android:title="@string/navigation_drawer_contacts"/>
        <item
            android:id="@+id/nav_weather"
            android:icon="@drawable/ic_weather"
            android:title="@string/navigation_drawer_weather"/>
        <item
            android:id="@+id/nav_maps"
            android:icon="@drawable/ic_map_black_24dp"
            android:title="@string/navigation_drawer_maps"/>
    </group>

    <group
        android:id="@+id/settings_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/navigation_drawer_logout"/>
    </group>

    <!--
    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share"/>
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send"/>
        </menu>
    </item>
    -->

</menu>
