<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mstudenets.studenetsbananaapp.view.RegisterActivity"
    tools:layout_editor_absoluteY="25dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/activity_register_login_prompt"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"/>

    <TextView
        android:id="@+id/activity_register_text_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_login_username"
        app:layout_constraintBottom_toBottomOf="@+id/activity_register_edit_username"
        app:layout_constraintTop_toTopOf="@+id/activity_register_edit_username"
        app:layout_constraintVertical_bias="0.48000002"
        android:layout_marginLeft="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="32dp"/>

    <TextView
        android:id="@+id/activity_register_text_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_login_password"
        app:layout_constraintBottom_toBottomOf="@+id/activity_register_edit_password"
        app:layout_constraintTop_toTopOf="@+id/activity_register_edit_password"
        app:layout_constraintVertical_bias="0.52"
        app:layout_constraintLeft_toLeftOf="@+id/activity_register_text_username"
        />

    <EditText
        android:id="@+id/activity_register_edit_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginTop="36dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintLeft_toLeftOf="@+id/activity_register_edit_password"
        android:layout_marginRight="32dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginEnd="32dp"/>

    <EditText
        android:id="@+id/activity_register_edit_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/activity_register_edit_username"
        app:layout_constraintRight_toRightOf="@+id/activity_register_edit_username"
        />

    <Button
        android:id="@+id/activity_register_button_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/activity_login_button_register"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_register_edit_password"/>

</android.support.constraint.ConstraintLayout>
